<resources>
    <string name="app_name">Hito1</string>
    <string name="action_settings">Settings</string>
    <string name="textUsuario">Usuario</string>
    <string name="textNombre">Nombre</string>
    <string name="textApellido">Apellido</string>
    <string name="botonIngresarEncargado">Crear Nuevo</string>
    <string name="seleccioneEncargado">Seleccione su Usuario</string>
    <string name="textoBienvenida">Bienvenido</string>
    <string name="itemEditarEncargado">Modificar Encargado</string>
    <string name="itemEditarVehiculo">Modificar Vehiculo</string>
    <string name="itemEditarServicio">Modificar Servicio</string>
    <string name="title_activity_ventana_de_vehiculos_gu">VentanaDeVehiculosGU</string>
    <string name="boton_modificar_encargado">Modificar</string>
    <string name="boton_modificar_vehiculo">Modificar</string>
    <string name="bont_crear_servicio">Crear Nuevo</string>
    <string name="texto_Kilometraje_cad_Cam">Km cada cambio</string>
    <string name="texto_Kilometraje_ult_Cam">Km último cambio</string>
    <string name="texto_Placa">Placa</string>
    <string name="texto_Tipo">Tipo Vehiculo</string>
    <string name="texto_Color">Color</string>
    <string name="texto_Marca">Marca</string>
    <string name="texto_Kilometraje">Kilometraje</string>
    <string name="boton_ingresar_vehiculo">Crear Nuevo</string>
    <string name="boton_eliminar_encargado">Eliminar Encargado</string>
    <string name="boton_eliminar_vehiculo">Eliminar Vehiculo</string>
    <string name="boton_eliminar_Servicio">Eliminar Servicio</string>
    <string name="boton_modificar_Servicio">Modificar</string>
    <string name="texto_Seleccione_Servicio">Seleccione Un Servicio</string>
    <string name="texto_Nombre_Servicio_R">Servicio</string>
    <string name="texto_Fecha">Fecha en que se realiza (año-mes-día)</string>
    <string name="boton_nuevo_Registro">Ingresar</string>
    <string name="item_menu_registros">Registros</string>
    <string name="boton_modificar_registros">Modificar</string>


</resources>
