<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaModificarEncargadoGUI">

    <EditText
        android:id="@+id/textApellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="328dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="textPersonName"
        android:text="@string/textApellido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombre2"
        app:layout_constraintVertical_bias="0.666"
        tools:text="@string/textApellido" />

    <EditText
        android:id="@+id/textNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="textPersonName"
        android:text="@string/textNombre"
        app:layout_constraintBottom_toTopOf="@+id/textApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsuario2"
        app:layout_constraintVertical_bias="0.67"
        tools:text="@string/textNombre" />

    <Button
        android:id="@+id/botonIngresarEncargado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:enabled="true"
        android:onClick="Modificar"
        android:text="@string/boton_modificar_encargado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textApellido2"
        app:layout_constraintVertical_bias="0.843" />

    <EditText
        android:id="@+id/textUsuario2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textUsuario"
        app:layout_constraintBottom_toTopOf="@+id/textNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/textUsuario" />

    <Button
        android:id="@+id/botonEliminarEncargado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:onClick="Eliminar"
        android:text="@string/boton_eliminar_encargado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonIngresarEncargado2"
        app:layout_constraintVertical_bias="0.274" />
</androidx.constraintlayout.widget.ConstraintLayout>