<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaDeCreacionServiciosGUI">

    <EditText
        android:id="@+id/textoNombreS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textNombre"
        app:layout_constraintBottom_toTopOf="@+id/textoKmCadaCambio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/textoKmCadaCambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textoKilometrajeUltimoCambio"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textoKilometrajeUltimoCambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="324dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonCrearNuevoServicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="192dp"
        android:enabled="false"
        android:onClick="RegistrarS"
        android:text="@string/bont_crear_servicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/texto_Kilometraje_cad_Cam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoKmCadaCambio"
        tools:text="@string/texto_Kilometraje_cad_Cam" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/texto_Kilometraje_ult_Cam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoKilometrajeUltimoCambio"
        tools:text="@string/texto_Kilometraje_ult_Cam" />
</androidx.constraintlayout.widget.ConstraintLayout>